--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <header>
-        <nav class="bg-blue-500 w-full py-3">
+        <nav class="bg-blue-500 w-full py-3 px-5">
             <div class="flex flex-row items-center justify-between space-x-5">
-                <h3>Leonard Ojojo</h3>
+                <h3 class="text-2xl font-medium text-white">Leonard Ojojo</h3>
                 <div class="flex flex-row items-center justify-start space-x-4 text-white">
                     <a href="#">Home</a>
                     <a href="#">About</a>
