--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
             <div class="flex flex-row items-center justify-between space-x-5">
                 <h3 class="text-2xl font-medium text-white">Leonard Ojojo</h3>
                 <div class="flex flex-row items-center justify-start space-x-4 text-white">
-                    <a href="#">Home</a>
-                    <a href="#">About</a>
+                    <a href="/">Home</a>
+                    <a href="about.html">About</a>
                 </div>
             </div>
         </nav>
     </header>
+    <main>
+        <h1>Welcome!</h1>
+    </main>
 </body>
 </html>
